Display scores to the user with new function rps
The function rps records multiple games and displays the score to the
user

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <button>Paper</button>
     <button>Scissors</button>
     <div class="results"></div>
+    <div>Player Score: <span id="playerScore"></span></div>
+    <div>Computer Score: <span id="computerScore"></span></div>
 </body>
 </html>
